--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,43 @@
-section#links ul {
-    list-style-type: none;
+body,html {
+    font-family: Arial, sans-serif;
 }
 
-section#links ul > li > a {
+.container {
+    margin: auto;
+    padding:0;
+    width: 50vw;
+}
+
+header {
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+section#links > ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+section#links > ul > li > a {
     display: block;
     border: 2px solid #999;
+    border-radius: 5px;
     margin: 1rem 0;
     padding: 0.5rem 2rem;
+    text-decoration: none;
     text-align: center;
     font-size: 1.25rem;
     font-weight: 500;
     color: #666;
-    transition: all 0.25s;
+    transition: all 0.3s;
 }
 
-section#links ul > li > a:hover, section#links ul > li > a:focus {
+section#links ul > li > a:focus ,
+section#links > ul > li > a:hover {
     text-decoration: none;
-    border: 2px solid #779;
-    color: #556;
-    transition: all 0.25s;
+    border: 2px solid #666;
+    background-color: #eee;
+    color: #333;
+    transition: all 0.3s;
 }
