--- a/templates/index.html
+++ b/templates/index.html
@@ -7,14 +7,8 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>{{ project_title }}</title>
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
-        <meta name="msapplication-TileColor" content="{{ tile_color }}">
-        <meta name="theme-color" content="{{ theme_color }}">
-
-        <link rel="stylesheet" href="css/{{ css_file_name }}.{{ css_file_suffix }}.css">
     </head>
 
     <body>
@@ -25,21 +19,16 @@
 
                 <header>
                     <h1>{{ project_title }}</h1>
+                    <small>By {{ project_author }}</small>
                 </header>
 
                 <section id="links">
-                    <div class="row justify-content-center">
-                        <div class="col-6">
-                            {{ links }}
-                        </div>
-                    </div>
+                    {{ links }}
                 </section>
 
             </div>
 
         </main>
-
-        <script src="js/{{ js_file_name }}.{{ js_file_suffix }}.js"></script>
 
     </body>
 
