--- a/templates/template.html
+++ b/templates/template.html
@@ -13,18 +13,21 @@
         <link rel="manifest" href="/site.webmanifest">
         <meta name="msapplication-TileColor" content="{{ tile_color }}">
         <meta name="theme-color" content="{{ theme_color }}">
-
         <link rel="stylesheet" href="css/{{ css_file_name }}.{{ css_file_suffix }}.css">
     </head>
 
     <body>
 
+        <header>
+            <div class="row">
+                <div class="col-12">
+                    <h1 class="text-center">{{ page_name }}</h1>
+                </div>
+            </div>
+        </header>
+        
         <main>
 
-            <div class="container">
-
-
-            </div>
 
         </main>
 
