--- a/templates/template.html
+++ b/templates/template.html
@@ -18,7 +18,9 @@
 
     <body>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+        <!-- Navigation -->
+        <nav class="navbar navbar-dark bg-dark">
             <a class="navbar-brand" href="/">{{ project_title }}</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -31,18 +33,22 @@
             </div>
         </nav>
 
+
+        <!-- Page Title -->
         <header>
             <div class="row">
                 <div class="col-12">
-                    <h1 class="text-center">{{ page_name }}</h1>
+                    <h1 class="text-center mx-4">{{ page_name }}</h1>
                 </div>
             </div>
         </header>
-        
+
+
         <main>
 
 
         </main>
+
 
         <script src="js/{{ js_file_name }}.{{ js_file_suffix }}.js"></script>
 
