--- a/templates/index.html
+++ b/templates/index.html
@@ -67,15 +67,18 @@
                     <small>By {{ project_author }}</small>
                 </header>
 
+                <section id="app"></section>
+
                 <section id="links">
                     <ul>
                         {{ links }}
                     </ul>
                 </section>
-                <br>
+
             </div>
 
         </main>
+
 
     </body>
 
