--- a/templates/template.html
+++ b/templates/template.html
@@ -20,7 +20,7 @@
 
         <!-- Navigation -->
         <ul id="template-links" class="nav justify-content-end bg-dark">
-            <li class="nav-item"><a href="/">{{ project_title }}</a></li>
+            <li class="nav-item"><a class="nav-link" href="/">{{ project_title }}</a></li>
             {{ links }}
         </ul>
 
