--- a/templates/index.html
+++ b/templates/index.html
@@ -75,11 +75,7 @@
 
 
                 <section id="app">
-                    <ul class="nav nav-pills">
-                        <li class="nav-item">
-                            <a class="nav-link active" class="btn btn-info" onclick=send('build')>build</a>
-                        </li>
-                    </ul>
+                    <input name="template" type="text"><buttton class="btn btn-info mx-3" onclick=create(document.getElementsByName('template')[0].value)>create</buttton>
                 </section>
 
 
@@ -98,6 +94,23 @@
             function send(command){
                 $.ajax({
                     url : 'http://localhost:3000/send',
+                    method : 'POST',
+                    data: {
+                        'command': command
+                    },
+                    success : function(res){
+                        console.log(res);
+                    },
+                    error : function(response){
+                        console.log('Error!');
+                        console.log(response);
+                    }
+                });
+            }
+
+            function create(command){
+                $.ajax({
+                    url : 'http://localhost:3000/create',
                     method : 'POST',
                     data: {
                         'command': command
