basic functionality tested and working :-)

--- a/templates/index.html
+++ b/templates/index.html
@@ -75,6 +75,7 @@
 
 
                 <section id="app">
+                    <button onclick="send('build')">build</button>
                     <input name="template" type="text"><buttton class="btn btn-info mx-3" onclick=create(document.getElementsByName('template')[0].value)>create</buttton>
                 </section>
 
