--- a/templates/template.html
+++ b/templates/template.html
@@ -18,13 +18,6 @@
 
     <body>
 
-        <!-- Navigation -->
-        <ul id="template-links" class="nav justify-content-end bg-dark">
-            <li class="nav-item"><a class="nav-link" href="/">{{ project_title }}</a></li>
-            {{ links }}
-        </ul>
-
-        <!-- Page Title -->
         <header>
             <div class="row">
                 <div class="col-12">
@@ -33,8 +26,9 @@
             </div>
         </header>
 
-        <!-- Main Content -->
         <main></main>
+
+        <footer></footer>
 
         <script src="js/{{ js_file_name }}.{{ js_file_suffix }}.js"></script>
 
