--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
                         <form action="" class="pb-3">
                             <div id="template-heading"></div>
                             <div class="input-group mb-2">
-                                <input type="text" class="form-control form-control-sm" id="template" name="template" placeholder="enter template name without .html">
+                                <input type="text" class="form-control form-control-sm" id="template" name="template" placeholder="enter name without .html">
                                 <div class="input-group-append">
                                     <button class="btn btn-sm btn-info ml-2" onclick=create(document.getElementsByName('template')[0].value)>create</button>
                                 </div>
@@ -76,7 +76,11 @@
                 }, {
                     'fn': 'images',
                     'text': 'create favicon',
-                    'icon': 'h-square',
+                    'icon': 'dice-five',
+                }, {
+                    'fn': 'zip',
+                    'text': 'zip assets',
+                    'icon': 'file-archive',
                 }, {
                     'fn': 'clean',
                     'text': 'delete templates',
@@ -173,21 +177,6 @@
         <!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
         <script>
-            function send(command){
-                $.ajax({
-                    url : 'http://localhost:3000/send',
-                    method : 'POST',
-                    data: {
-                        'command': command
-                    },
-                    success : function(result){
-                        console.log(result)
-                    },
-                    error : function(result){
-                        console.log(result)
-                    }
-                });
-            }
 
             function create(command){
                 $.ajax({
